monitoring/grafana/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    name: grafana
    app: grafana
