monitoring/grafana/05-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: grafana
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:5.2.4
        ports:
        - name: http
          containerPort: 3000
