monitoring/grafana/06-service.yml
kind: Service
apiVersion: v1
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
  - name: http
    port: 80
    targetPort: http
