monitoring/grafana/07-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
spec:
  rules:
  - host: grafana.schuldt.lcl
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: http
